--- a/public/styles.css
+++ b/public/styles.css
@@ -38,7 +38,7 @@
   .note {
     background: #fff;
     border-radius: 7px;
-    box-shadow: 0 2px 5px #ccc;
+    box-shadow: 0px 2px 5px #ccc;
     padding: 10px;
     width: 240px;
     margin: 16px;
