--- a/public/styles.css
+++ b/public/styles.css
@@ -5,14 +5,18 @@
 }
 html {
   font-family: "Montserrat", sans-serif;
+  height: 100%;
 }
 body {
   background: #eee;
   padding: 0 16px;
+  height: 100%;
 }
 
 header {
   background-color: #f5ba13;
+  position: fixed;
+  width: 100%;
   margin: auto -16px;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
@@ -25,13 +29,21 @@ header h1 {
 }
 
 footer {
-  position: absolute;
+  position: fixed;
+  bottom:0;
+  display: block;
+  margin: auto -16px;
   text-align: center;
-  bottom: 0;
+
   width: 100%;
   height: 2.5rem;
-  background-color: black;
+  background-color: teal;
   padding-top: .5em;
+
+}
+
+#list{
+  padding-top: 90px;
 }
 
 footer p {
@@ -44,7 +56,9 @@ footer p {
   padding: 10px;
   width: 240px;
   margin: 16px;
+ 
   float: left;
+
 }
 .note h1 {
   font-size: 1.1em;
